# hpipm

./: .gitignore  .travis.yml  CMakeLists.txt  Changelog.txt  LICENSE.txt  Makefile  Makefile.rule  README.md
archive/: test_d_nlp_ipm.c  test_d_nlp_sqp.c  test_d_pendulum_hyb.c  test_d_pendulum_ipm.c  test_d_pendulum_sqp.c  test_d_sim.c  test_van_der_pol_hyb.c  test_van_der_pol_ipm.c  test_van_der_pol_sqp.c
aux/: Makefile  aux_string.c
auxiliary/: Makefile  aux_mem.c  aux_string.c  d_aux.c  timing.c
benchmark/: .gitattributes  .gitignore  Makefile  d_benchmark.h  dense_qp_in_common.c  dense_qp_in_common.h  fetch_cpp_data  test_bench_hpipm.c  test_d_benchmark.c
cond/: Makefile  d_aux_cond.c  d_cond.c  d_cond_aux.c  d_cond_qcqp.c  d_elim_x0.c  d_part_cond.c  d_part_cond_qcqp.c  s_cond.c  s_cond_aux.c  s_cond_qcqp.c  s_part_cond.c  s_part_cond_qcqp.c  x_cast_qcqp.c  x_cond.c  x_cond_aux.c  x_cond_qcqp.c  x_part_cond.c  x_part_cond_qcqp.c
core/: d_core_qp_ipm_hard.c  d_core_qp_ipm_hard_aux.c
core_qp/: Makefile  d_core_qp_ipm_hard.c  d_core_qp_ipm_hard_aux.c  s_core_qp_ipm_hard_aux.c  x_core_qp_ipm_hard_aux.c
dense_kkt/: Makefile  d_aux.c  d_aux_dense_qp.c  d_dense_qp_ipm_hard.c  d_dense_qp_sol.c  d_ipm2_hard_dense_qp.c  d_ipm_hard_dense_qp.c  d_kkt_dense_qp.c  s_aux.c  s_aux_dense_qp.c  s_dense_qp.c  x_aux.c  x_aux_dense_qp.c  x_dense_qp.c
dense_qp/: Makefile  d_dense_qcqp.c  d_dense_qcqp_dim.c  d_dense_qcqp_ipm.c  d_dense_qcqp_res.c  d_dense_qcqp_sol.c  d_dense_qcqp_utils.c  d_dense_qp.c  d_dense_qp_dim.c  d_dense_qp_ipm.c  d_dense_qp_ipm_hard.c  d_dense_qp_kkt.c  d_dense_qp_res.c  d_dense_qp_seed.c  d_dense_qp_sol.c  d_dense_qp_utils.c  m_dense_qp.c  m_dense_qp_dim.c  s_dense_qcqp.c  s_dense_qcqp_dim.c  s_dense_qcqp_ipm.c  s_dense_qcqp_res.c  s_dense_qcqp_sol.c  s_dense_qcqp_utils.c  s_dense_qp.c  s_dense_qp_dim.c  s_dense_qp_ipm.c  s_dense_qp_ipm_hard.c  s_dense_qp_kkt.c  s_dense_qp_res.c  s_dense_qp_seed.c  s_dense_qp_sol.c  s_dense_qp_utils.c  x_dense_qcqp.c  x_dense_qcqp_dim.c  x_dense_qcqp_ipm.c  x_dense_qcqp_res.c  x_dense_qcqp_sol.c  x_dense_qcqp_utils.c  x_dense_qp.c  (+8 more)
doc/: guide.tex
examples/c/: CMakeLists.txt  Makefile  data_getting_started.c  example_d_dense_qp.c  example_d_ocp_qcqp_part_cond.c  example_d_ocp_qcqp_x0emb_cond.c  example_d_ocp_qcqp_x0emb_part_cond.c  example_d_ocp_qp.c  example_d_ocp_qp_cond_sens.c  example_d_ocp_qp_part_cond.c  example_d_ocp_qp_part_cond_sens.c  example_d_ocp_qp_sens.c  example_d_ocp_qp_solver.c  example_d_ocp_qp_unconstr.c  example_d_ocp_qp_x0emb.c  example_d_ocp_qp_x0emb_cond.c  example_d_ocp_qp_x0emb_part_cond.c  example_d_ocp_qp_x0emb_part_cond_sens.c  getting_started.c
examples/c/data/: getting_started_data.c  getting_started_dense_qp_data.c  mass_spring_qcqp_data.c  mass_spring_qp_data.c  pmsm_ocp_qcqp_data.c
examples/c/nan_issue/: qp_dims.c  qp_in.c
include/: hpipm_aux_mem.h  hpipm_aux_string.h  hpipm_common.h  hpipm_d_aux_cond.h  hpipm_d_aux_ipm_hard.h  hpipm_d_cond.h  hpipm_d_cond_aux.h  hpipm_d_cond_qcqp.h  hpipm_d_core_qp_ipm.h  hpipm_d_core_qp_ipm_aux.h  hpipm_d_core_qp_ipm_hard.h  hpipm_d_core_qp_ipm_hard_aux.h  hpipm_d_dense_qcqp.h  hpipm_d_dense_qcqp_dim.h  hpipm_d_dense_qcqp_ipm.h  hpipm_d_dense_qcqp_res.h  hpipm_d_dense_qcqp_sol.h  hpipm_d_dense_qcqp_utils.h  hpipm_d_dense_qp.h  hpipm_d_dense_qp_dim.h  hpipm_d_dense_qp_ipm.h  hpipm_d_dense_qp_ipm_hard.h  hpipm_d_dense_qp_kkt.h  hpipm_d_dense_qp_res.h  hpipm_d_dense_qp_seed.h  hpipm_d_dense_qp_sol.h  hpipm_d_dense_qp_utils.h  hpipm_d_erk_int.h  hpipm_d_ipm2_hard_dense_qp.h  hpipm_d_ipm2_hard_revcom.h  hpipm_d_ipm2_hard_revcom_qp.h  hpipm_d_ipm_hard_core_qp.h  hpipm_d_ipm_hard_dense_qp.h  hpipm_d_ipm_hard_ocp_qp.h  hpipm_d_ipm_hard_revcom_qp.h  hpipm_d_irk_int.h  hpipm_d_kkt.h  hpipm_d_kkt_dense_qp.h  hpipm_d_kkt_ocp_qp.h  hpipm_d_ocp_nlp.h  (+112 more)
ipm/: Makefile  d_aux_hard.c  d_aux_hard_c.c  d_aux_ipm_hard.c  d_ipm2_hard_revcom.c  d_ipm2_hard_revcom_qp.c  d_ipm_hard_core_qp.c  d_ipm_hard_revcom_qp.c  ipm2_hard_rev_com.c  ipm2_hard_revcom.c
ipm_core/: Makefile  d_core_qp_ipm.c  d_core_qp_ipm_aux.c  d_core_qp_ipm_aux_avx.c  d_core_qp_ipm_aux_avx512.c  s_core_qp_ipm.c  s_core_qp_ipm_aux.c  s_core_qp_ipm_aux_avx.c  s_core_qp_ipm_aux_avx512.c  s_core_qp_ipm_hard.c  x_core_qp_ipm.c  x_core_qp_ipm_aux.c  x_core_qp_ipm_hard.c  x_core_qp_ipm_hard_aux.c
ocp_kkt/: Makefile  d_aux.c  d_cond.c  d_ipm_hard_ocp_qp.c  d_kkt_ocp_qp.c  d_ocp_qp_kkt.c  d_ocp_qp_sol.c  s_aux.c  s_ocp_qp.c  s_ocp_qp_sol.c  x_aux.c
ocp_nlp/: Makefile  d_ocp_nlp.c  d_ocp_nlp_aux.c  d_ocp_nlp_hyb.c  d_ocp_nlp_ipm.c  d_ocp_nlp_sol.c  d_ocp_nlp_sqp.c  s_ocp_nlp_sol.c  x_ocp_nlp_sol.c
ocp_qp/: Makefile  d_ocp_qcqp.c  d_ocp_qcqp_dim.c  d_ocp_qcqp_ipm.c  d_ocp_qcqp_red.c  d_ocp_qcqp_res.c  d_ocp_qcqp_sol.c  d_ocp_qcqp_utils.c  d_ocp_qp.c  d_ocp_qp_dim.c  d_ocp_qp_ipm.c  d_ocp_qp_ipm_hard.c  d_ocp_qp_kkt.c  d_ocp_qp_red.c  d_ocp_qp_res.c  d_ocp_qp_seed.c  d_ocp_qp_sim.c  d_ocp_qp_size.c  d_ocp_qp_sol.c  d_ocp_qp_utils.c  m_ocp_qp.c  m_ocp_qp_ipm_hard.c  m_ocp_qp_kkt.c  s_ocp_qcqp.c  s_ocp_qcqp_dim.c  s_ocp_qcqp_ipm.c  s_ocp_qcqp_red.c  s_ocp_qcqp_res.c  s_ocp_qcqp_sol.c  s_ocp_qcqp_utils.c  s_ocp_qp.c  s_ocp_qp_dim.c  s_ocp_qp_ipm.c  s_ocp_qp_ipm_hard.c  s_ocp_qp_kkt.c  s_ocp_qp_red.c  s_ocp_qp_res.c  s_ocp_qp_seed.c  s_ocp_qp_size.c  s_ocp_qp_sol.c  (+19 more)
sim_core/: Makefile  d_erk_int.c  d_irk_int.c  d_rk_int.c  d_sim_erk.c  d_sim_rk.c  s_sim_rk.c  (+3 more)
test_problems/: .test_d_ocp.c.swo  CMakeLists.txt  Makefile  d_tools.c  d_tools.h  s_tools.c  s_tools.h  test_d_cast_qcqp.c  test_d_cond.c  test_d_cond_qcqp.c  test_d_dense.c  test_d_dense_qcqp.c  test_d_nlp_ipm.c  test_d_ocp.c  test_d_ocp2.c  test_d_ocp_phaseI.c  test_d_ocp_phase_I.c  test_d_ocp_qcqp.c  test_d_part_cond.c  test_d_part_cond_qcqp.c  test_d_pendulum_hyb.c  test_d_pendulum_ipm.c  test_d_pendulum_sqp.c  test_d_sim.c  test_d_sqp.c  test_d_tree_ocp.c  test_d_tree_ocp_qcqp.c  test_m_ocp.c  test_s_dense.c  test_s_ocp.c  test_s_tree_ocp.c  test_van_der_pol.c  test_van_der_pol_hyb.c  test_van_der_pol_ipm.c  test_van_der_pol_sqp.c  tools.c  tools.h
(+314 files in other folders)
